[package]
name = "game"
version = "0.1.0"
authors = ["KirN <krk@pm.me>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.8.2"
thiserror = "1.0.25"
solana-program = "1.6.10"

[dev-dependencies]
solana-program-test = "1.6.10"
solana-sdk = "1.6.10"


[lib]
crate-type = ["cdylib", "lib"]